// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<ControlledInput
  isDisabled={false}
  labelText="radio-button"
  required={false}
  testId="cf-ui-radio-button"
  type="radio"
/>
`;

exports[`renders the component with an additional class name 1`] = `
<ControlledInput
  className="my-extra-class"
  isDisabled={false}
  labelText="radio-button"
  required={false}
  testId="cf-ui-radio-button"
  type="radio"
/>
`;
